[tool.poetry]
name = "magnotether-pi-sims"
version = "0.1.0"
description = ""
authors = ["Will Dickson <wbd@caltech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
